--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "jmgq/a-star",
+    "name": "alexmanno/a-star",
     "description": "A* (A Star) algorithm for PHP",
     "keywords": ["a", "a star", "search", "pathfinding", "algorithm"],
     "license": "MIT",
@@ -12,16 +12,16 @@
     ],
     "autoload": {
         "psr-4": {
-            "JMGQ\\AStar\\": "src/",
-            "JMGQ\\AStar\\Example\\": "examples/",
-            "JMGQ\\AStar\\Tests\\": "tests/"
+            "AStar\\": "src/",
+            "AStar\\Example\\": "examples/",
+            "AStar\\Tests\\": "tests/"
         }
     },
     "require": {
-        "php": ">=5.3.0"
+        "php": "^7.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.*",
+        "phpunit/phpunit": "6.*",
         "satooshi/php-coveralls": "dev-master",
         "squizlabs/php_codesniffer": "1.*"
     }
